kernel/include/file.h

struct file {
	enum { FD_NONE, FD_PIPE, FD_INODE } type;
	int ref; // reference count
	char readable;
	char writable;
	struct pipe *pipe;
	struct inode *ip;
	uint32_t off;
};
enum { CONSOLE = 1, NULLDRV = 2, FB = 3, };
struct file *
filealloc(void);
void
fileclose(struct file *);
int
fileopen(char *path, int omode);
struct file *
filedup(struct file *);
void
fileinit(void);
int
fileread(struct file *, char *, int n);
int
filestat(struct file *, struct stat *);
int
filewrite(struct file *, char *, int n);
int
fileseek(struct file *f, int n, int whence);
struct file *
fd_to_struct_file(int fd);